<resources>
    <string name="app_name">MightyD</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_tv_1">Bearbeitet von:</string>
    <string name="nav_tv_2">Po. Tato</string>
    <string name="nav_tv_3">Pi. Neapple</string>
    <string name="title_activity_maps">Map</string>

    <string name="gpsConfirmation_message"> GPS ist nicht aktiviert. Um alle Funktionen dieser Anwendung nutzen zu können, müssen Sie GPS aktivieren. Wollen Sie zu den Einstellungen weitergeleitet werden?</string>
    <string name="gpsConfirmation_yes">Ja</string>
    <string name="gpsConfirmation_no">Nein</string>

    <string name="nav_last_tracks">Letzte Tracks</string>
    <string name="nav_imprint">Impressum</string>

    <string name="abbruch">Abbruch</string>
    <string name="savebutton">Speichern</string>

    <string name="choose_vm">Bitte wählen Sie ein Verkehrsmittel aus:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="date">Datum</string>
    <string name="duration">Dauer</string>
    <string name="length">Länge</string>
    <string name="title_activity_track_overview">TrackOverviewActivity</string>

    <string name="map">Karte</string>

    <string name="imprint">Diese App wurde erstellt von: \n\n  Friedemann von oppen \n  Jan Hauenstein \n  Christoph Welz \n  Felix Krüger \n\n an der HS Karlsruhe</string>

</resources>
